trunk/Archive2/4a/a921fde0a11af9/output
+ clang++ -std=c++11 -O0 -Wall -pedantic main.cpp
main.cpp:15:18: error: no viable conversion from '__gnu_cxx::__normal_iterator<const char *, std::basic_string<char> >' to 'char'
          return curr = data.begin();
                 ^~~~~~~~~~~~~~~~~~~
1 error generated.
